<resources>
    <string name="app_name">MethodOfGoldPickOnKotlin</string>
    <string name="search_max">Поиск Максимума</string>
    <string name="search_min">Поиск Минимума</string>
    <string name="add_chart">Построить график</string>
    <string name="for_min">Для минимума</string>
    <string name="zero">0</string>
    <string name="minX">Значение x</string>
    <string name="enter_cd">Ввести кординаты</string>
    <string name="minY">Значение y</string>
    <string name="maxY">Значение y (max)</string>
    <string name="maxX">Значение x (max)</string>
    <string name="enter_fun">Введите функцию</string>
    <string name="enter_function">Ввести функцию</string>
</resources>